# vosk-server

./: .env  .gitignore  Dockerfile  Makefile  README.md  app-model.py  app-server.py  app.py  config.json  docker-compose.yml  gunicorn_config.py  index.html  pyproject.toml  requirements.txt  run.py  template.env  wsgi.py
app/: __init__.py  clients.py  config.py  context.py  socket_handler.py
app/blueprints/: home.py  voice_to_text.py  wav_to_text.py
app/blueprints/templates/: home.html  voice_to_text.html  wav_to_text.html
app/data/: client.py  task.py  task_manager.py  task_status.py  voice_task.py  wav_task.py
app/libraries/: converter.py  vad.py
app/static/: config.json
app/static/css/: style.css
app/static/js/: speech_to_text.js  wav_to_text.js
app/static/js/configs/: config.js
app/static/js/modules/: dataConversionProcessor.js  download.js  processor.js  recordingHandler.js  timer.js  toogleConfig.js  voskMessageHandler.js  webSocketHandler.js
app/tempo/: client.py  clients.py
certificates/: certificate.crt  certificate.csr  private.key
nginx/: nginx.conf
static/css/: style.css
static/js/: config.js  data-conversion-processor.js  speech_to_text.js  wav_to_text.js  websocket_handler.js
templates/: home.html  index.html  voice_to_text.html  wav_to_text.html
