[tool.poetry]
name = "vosk-server"
version = "0.1.0"
description = ""
authors = ["freshro3es <igorkarpy@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
Flask-SocketIO = "^5.4.1"
Flask-Cors = "^5.0.0"
websockets = "^13.1"
numpy = "^2.1.2"
scipy = "^1.14.1"
python-dotenv = "^1.0.1"
ffmpeg = "1.4"
ffprobe = "0.5"
onnxruntime = "^1.19.2"
silero-vad = "^5.1.2"
soundfile = "^0.12.1"
types-flask-cors = "^5.0.0.20240902"
types-flask-socketio = "^5.4.0.20241002"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


